# domo-vector-cli

./: .env.example  .gitignore  README.md  constants.py  delete.py  document_models.py  get.py  help.py  helper.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_delete.py  test_get.py  test_upsert.py  upsert.py
documentation/docs/Apps/: Overview.md
documentation/docs/Connectors/: Overview.md
documentation/docs/Data-Science/: accelerators.md  ai-services.md  autoML.md  data-science-tiles.md  jupyter.md  scripting-tiles.md
documentation/docs/Domo-App-APIs/: AI-Service-Layer-API.md  Analytics.md  AppDB-API.md  Buzz-API.md  Data-API.md  Files-API.md  Workflows-API - copy.md  Workflows-API.md
documentation/docs/GameNightPlannerApp/: going-from-brick-to-app.md  intro-to-bricks.md
documentation/docs/Getting-Started/: api-authentication.md  overview.md  sdks.md
documentation/docs/Governance/: activity-log.md  data-management.md  security.md  user-management.md
documentation/docs/Installation-Guides/: Accounts-Payable-Trend.md  Active-Traders-Exchanges.md  Ad-Sales-Revenue.md  Aged-Trial-Balance.md  Anaplan-Sales-Forecast.md  Annual-Contract-Value.md  Apartment-Vacancy.md  App-Development.md  App-Installation-Guides.md  Apps-by-Beyond-Payroll.md  Apps-by-BigSquid.md  Apps-by-Brandwatch.md  Apps-by-CPQ-Solutions.md  Apps-by-Domo.md  (+169 more)
domo_vector_cli/: config.py  configure.py  constants.py  delete.py  fileset.py  get.py  help.py  main.py  upsert.py  vector.py
tests/: test_delete.py  test_fileset.py  test_get.py  test_main.py  test_upsert.py
(+61 files in other folders)
