[tool.setuptools.packages.find]
include = ["domo_vector*"]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "domo-vector"
version = "0.1"
description = "A CLI for chunking, uploading, and managing documentation files in a Domo vector index."
authors = [
    { name = "Jon Tiritilli" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx",
    "langchain-text-splitters",
    "pymupdf",
    "beautifulsoup4",
    "python-dotenv",
    "pillow"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[project.scripts]
domo-vector = "domo_vector_cli.main:main"

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async",
]
